# game-screen-pick

./: .copier-answers.yml  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  main.py  pyproject.toml
.github/workflows/: pr-quality-checks.yml  pr-tag-check.yml
docs/adr/: 0001-use-ollama-scene-classification.md  0002-classify-selection-shortlist-with-ollama.md  0003-derive-selection-roles-from-scene-catalog.md
src/: __init__.py  main.py
src/analyzers/: __init__.py  analyzer_pool.py  analyzer_worker.py  batch_pipeline.py  clip_model_manager.py  clip_types.py  feature_extractor.py  image_quality_analyzer.py  image_quality_analyzer_pool.py  layout_analyzer.py  metric_calculator.py  metric_normalizer.py  parallel_metrics_worker.py
src/application/: run.py
src/cache/: __init__.py  feature_cache.py
src/constants/: __init__.py  content_filter_thresholds.py  genre_weights.py  profile_weights.py  scene_label.py  score_weights.py  selection_profiles.py  selection_quality_weights.py  transition_thresholds.py
src/models/: __init__.py  activity_bucket.py  adaptive_scores.py  analyzed_image.py  analyzer_config.py  application_run_request.py  bucket_plan.py  bucketed_image.py  cache_entry.py  cache_entry_info.py  config_from_args_mixin.py  content_filter_result.py  content_reject_reason.py  genre_weights.py  image_metrics.py  layout_heuristics.py  metric_distribution.py  normalized_metrics.py  ollama_config.py  output_candidate_record.py  output_record.py  path_metadata.py  picker_statistics.py  raw_metrics.py  scene_assessment.py  scene_catalog_entry.py  scene_classification.py  scene_mix.py  (+9 more)
tests/: __init__.py  conftest.py  counting_scene_analyzer.py  dummy_model_manager.py  fake_analyzer.py  fake_counting_analyzer.py  fake_feature_extractor.py  fake_mutating_analyzer.py  fake_scene_analyzer.py  test_main.py  test_pr_tag_check_workflow.py  test_vector_utils.py
(+81 files in other folders)
