[project]
name = "game-screen-pick"
version = "0.1.0"
description = "ゲームスクリーンショットから品質・ジャンル・多様性を考慮して最適な画像を自動選択するAIツール"
authors = [
    {name = "みず", email = "mizu.copo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pillow>=12.1.0",
    "scikit-learn>=1.7.0",
    "torch>=2.9.1",
    "transformers>=4.57.6",
]

[project.scripts]
game-screen-pick = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "python-decouple-stubs>=0.1",
    "ruff>=0.14.10",
    "taskipy>=1.14.1",
    "types-requests>=2.32.4.20250913",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "ARG", "D"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
python_version = "3.13"
files = ["src", "tests"]
mypy_path = "src:stubs"

[tool.taskipy.tasks]
test = "ruff check --fix src tests stubs && ruff format src tests stubs && mypy && pytest"

[tool.uv]
package = true
